[package]
name = "there-and-back-again"
version = "0.1.6"
edition = "2021"
publish = false

[dependencies]
avian3d = "0.1.1"
bevy = { version = "0.14" }
bevy_easings = "0.14.0"
bevy_firework = "0.5.0"
event-listener = "5.3.1"
rand = "0.8.5"
thiserror = "1.0.63"

[profile.dev.package."*"]
opt-level = 3

[profile.wasm-release]
inherits = "release"
opt-level = "z"
lto = "fat"
codegen-units = 1

[profile.native-release]
inherits = "release"
lto = true

[features]
default = []
release = []
debug = ["avian3d/debug-plugin"]
