[package]
name = "there-and-back-again"
version = "0.1.16"
edition = "2021"
publish = false
default-run = "there-and-back-again"

[dependencies]
avian3d = "0.1.1"
bevy = { version = "0.14" }
bevy_easings = "0.14.0"
bevy_firework = "0.5.0"
bitflags = "2.6.0"
event-listener = "5.3.1"
polyanya = { version = "0.7.1", features = ["no-default-baking"] }
rand = "0.8.5"
thiserror = "1.0.63"
tracing = "0.1.40"

[profile.dev.package."*"]
opt-level = 3

[profile.wasm-release]
inherits = "release"
opt-level = "z"
lto = "fat"
codegen-units = 1

[profile.native-release]
inherits = "release"
lto = true

[features]
default = []
release = ["tracing/release_max_level_error"]
debug = ["avian3d/debug-plugin"]
builder = ["bevy/file_watcher"]

[patch.crates-io]
polyanya = { git = "https://github.com/vleue/polyanya", branch = "layers" }
